--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -31,9 +31,19 @@ a {
   line-height: 24.55px;
   text-align: left;
   text-decoration: none;
-  color: #FDFDFD;
+  color: #fdfdfd;
   cursor: pointer;
   text-align: center;
+}
+
+p {
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  text-align: left;
+  text-decoration-skip-ink: none;
+  color: #18121e;
 }
 
 h1 {
@@ -45,7 +55,7 @@ h1 {
   letter-spacing: 0.02em;
   text-align: left;
   text-decoration-skip-ink: none;
-  color: #FDFDFD;
+  color: #fdfdfd;
 }
 
 h2 {
@@ -57,7 +67,8 @@ h2 {
   text-decoration-skip-ink: none;
 }
 
-h3 { /* Yellow text on the title */
+h3 {
+  /* Yellow text on the title */
   font-family: "Nunito", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -65,6 +76,16 @@ h3 { /* Yellow text on the title */
   text-align: left;
   text-decoration-skip-ink: none;
   color: #f2be22;
+}
+
+h4 {
+  font-family: "Nunito Sans";
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0.012em;
+  text-align: left;
+  text-decoration-skip-ink: none;
 }
 
 button {
@@ -80,23 +101,24 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #1A3E3E;
-  color: #FDFDFD;
+  background-color: #1a3e3e;
+  color: #fdfdfd;
   cursor: pointer;
   transition-duration: 200ms;
 }
 
 button:hover {
-  color: #1A3E3E;
-  background-color: #FDFDFD;
-  border: 1px solid #1A3E3E
+  color: #1a3e3e;
+  background-color: #fdfdfd;
+  border: 1px solid #1a3e3e;
 }
 
 .main {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  row-gap: 100px;
+  /* justify-content: space-between; */
   align-items: center;
 }
