Небольшой фикс классов

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -45,7 +45,7 @@
   height: 50px;
 }
 
-.textContainer {
+.aboutTextContainer {
     width: 580px;
     height: 398px;
     justify-content: space-between;
