--- a/src/styles/Header And Form/form.css
+++ b/src/styles/Header And Form/form.css
@@ -104,7 +104,7 @@
   position: absolute;
   top: 50px;
   width: 270px;
-  height: 100px;
+  height: auto;
   display: flex;
   flex-direction: column;
   padding-left: 25px;
@@ -114,7 +114,7 @@
   background-color: #ffffff33;
   border-radius: 0px 0px 8px 8px;
   animation: dropdown 300ms ease-in-out forwards;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 @keyframes dropdown {
@@ -128,4 +128,24 @@
 
 .form_select_list__active p {
   font-size: small;
+}
+
+.formButton {
+  width: 213px;
+  height: 52px;
+  background-color: #fdfdfd;
+  color: #1a3e3e;
+  transition-duration: 200ms;
+  font-family: "Nunito Sans";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0.012em;
+  text-align: left;
+  text-decoration-skip-ink: none;
+}
+
+.formButton:hover {
+  background-color: #1a3e3e;
+  color: #fdfdfd;
 }
