--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -88,6 +88,15 @@ h4 {
   text-decoration-skip-ink: none;
 }
 
+h5 {
+  font-family: "Nunito Sans";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: left;
+  text-decoration-skip-ink: none;
+}
+
 button {
   font-family: "Nunito Sans", sans-serif;
   font-size: 16px;
