Блог о путешествиях, Делимся впечатлениями

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -131,3 +131,10 @@ button:hover {
   /* justify-content: space-between; */
   align-items: center;
 }
+
+.titles {
+  width: Hug (580px) px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
+}
