--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -19,7 +19,7 @@
 .imgContainer img {
   width: 350px;
   height: 400px;
-  border-radius: 24px 0px 0px 0px;
+  border-radius: 24px;
   z-index: 1;
   object-fit: cover;
 }
@@ -29,7 +29,7 @@
   top: 126px;
   width: 350px;
   height: 400px;
-  border-radius: 24px 0px 0px 0px;
+  border-radius: 24px;
   background-image: url(../images/about/downright.jpeg);
   background-position: 50%;
   z-index: 2;
@@ -38,6 +38,7 @@
   align-items: center;
   justify-content: center;
   align-self: flex-end;
+  cursor: pointer;
 }
 
 .downRightImg img {
