--- a/src/styles/popular.css
+++ b/src/styles/popular.css
@@ -28,42 +28,39 @@
   column-gap: 20px;
 }
 
-.cardItem {
-  max-width: 380px;
-  min-width: 285px;
-  width: 100%;
-  height: 500px;
-  border-radius: 32px;
-  position: relative;
-  /* background-image: url(../images/popular/firstimage.jpeg); */
-  object-fit: cover;
-}
-
+.cardItem,
 .cardItemBg {
   max-width: 380px;
   min-width: 285px;
   width: 100%;
   height: 500px;
   border-radius: 32px;
-  position: absolute;
-  z-index: 0;
   object-fit: cover;
 }
 
+.cardItem {
+  position: relative;
+}
+
+.cardItemBg {
+  position: absolute;
+  z-index: 0;
+}
+
 .cardItem:hover .cardItemInfo {
-    top: 0px;
-    height: 500px;
+  top: 0;
+  height: 500px;
 }
 
 .popularRaiting {
-  position: absolute;
+  position: static;
   width: 65px;
   height: 32px;
-  top: 50px;
-  left: 315px;
-  padding: 0px 8px;
-  border-radius: 4px 0px 0px 4px;
-  opacity: 0px;
+  margin-top: 50px;
+  float: right;
+  padding: 0 8px;
+  border-radius: 4px 0 0 4px;
+  opacity: 0;
   background-color: #fdfdfd66;
   backdrop-filter: blur(4px);
   display: flex;
@@ -78,15 +75,16 @@
   opacity: 0;
 }
 
-
 .cardItemInfo {
   position: absolute;
-  width: 380px;
+  max-width: 380px;
+  min-width: 285px;
+  width: 100%;
   height: 90px;
   border-radius: 32px;
   display: flex;
   flex-direction: column;
-  padding: 30px 0px 20px 0px;
+  padding: 30px 0 20px;
   row-gap: 40px;
   align-items: center;
   background-color: #ffffff33;
@@ -99,29 +97,31 @@
 .cardItemInfoMainHeader {
   display: flex;
   flex-direction: row;
-  align-items: end;
+  align-items: center;
   column-gap: 35px;
+  padding: 0 10px;
+  flex-wrap: nowrap;
+}
+
+.cardItemInfoMainHeader h3,
+.cardItemInfoMainHeader h5 {
+  font-family: "Nunito Sans";
+  text-align: left;
+  text-decoration-skip-ink: none;
+  color: #fdfdfd;
 }
 
 .cardItemInfoMainHeader h3 {
-  font-family: "Nunito Sans";
   font-size: 24px;
   font-weight: 700;
   line-height: 28.8px;
-  text-align: left;
-  text-decoration-skip-ink: none;
-  color: #fdfdfd;
 }
 
 .cardItemInfoMainHeader h5 {
-  font-family: "Nunito Sans";
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
-  text-align: left;
   text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-  color: #fdfdfd;
 }
 
 .cardItemPrice {
@@ -163,6 +163,6 @@
 }
 
 .carfItemInfoButton {
-    width: 176px;
-    height: 44px;
+  width: 176px;
+  height: 44px;
 }
