--- a/src/styles/impressions.css
+++ b/src/styles/impressions.css
@@ -6,13 +6,14 @@
   justify-content: space-between;
   align-items: center;
   padding-bottom: 198px;
+  position: relative;
 }
 
 .impressionsGridContainer {
   width: 1180px;
   height: 520px;
-  gap: 20px;
   display: grid;
+  gap: 20px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-areas:
     "first first two three"
@@ -25,14 +26,19 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  border-radius: 6px;
 }
 
 .imressionsMagnifier {
   position: absolute;
-  object-fit: none;
-  z-index: 2;
   width: 100%;
   height: 100%;
+  border-radius: 6px;
+}
+
+.imressionsMagnifier {
+  object-fit: none;
+  z-index: 2;
   background-color: rgba(0, 0, 0, 0.158);
   opacity: 0;
   transition-duration: 200ms;
@@ -47,10 +53,58 @@
 
 .impressionsGridCard:hover .imressionsMagnifier {
   opacity: 1;
-  
 }
 
 .impressionsButton {
-    width: 178px;
-    height: 52px;
+  width: 178px;
+  height: 52px;
+}
+
+.impressionsAbsolute {
+  width: 1180px;
+  height: 196px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 36px;
+  position: absolute;
+  top: 908px;
+  box-shadow: 0px 0px 15px 0px #18121E1F;
+  z-index: 5;
+  background-color: #FDFDFD;
+  
+}
+
+.impressionsEmailContainer {
+  width: 536px;
+  height: 108px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
+}
+
+.impressionsEmailForm {
+  width: 100%;
+  height: 44px;
+  gap: 16px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.impressionsEmailForm input {
+  width: 280px;
+  height: 44px;
+  outline: none;
+  border: 0;
+  border-radius: 4px;
+  padding-left: 16px;
+  background-color: #F3F5F4;
+}
+
+.impressionsEmailButton {
+  width: 240px;
+  height: 44px;
 }
